tests/expectations/parser/functions/mut_input_fail.out
Error [EPAR0370005]: expected ':' -- found 'a'
    --> test:3:10
     |
   3 | fn f(mut a: u8) {}
     |          ^
Error [EPAR0370047]: expected `import`, `program`, or module item at top level
    --> test:3:11
     |
   3 | fn f(mut a: u8) {}
     |           ^
